test/langtools/tools/javac/datum/DatumCanNotDeclaredFieldsWithSameName.out
DatumCanNotDeclaredFieldsWithSameName.java:8:26: compiler.err.record.cant.declare.duplicate.fields
1 error
